# tox-external-wheels

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_test.yml  check.yml  pythonrelease.yml
docs/: changelog.rst  index.rst
src/tox_external_wheels/: exception.py  plugin.py
tests/: conftest.py  test_version.py
tests/integration/: test_tox_external_wheels_config_int.py  test_tox_external_wheels_param_int.py  test_tox_tox_external_wheels_int.py
tests/unit/: test_part_of_env.py  test_version.py
tests/wheels/: six-1.14.0-py2.py3-none-any.whl  subpar_app-0.2.0-py2.py3-none-any.whl  super_app-1.0.0-py2.py3-none-any.whl
